fixed some problems

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   </div>
     </div>
     <div class="modal-bg" id="cardInfoModal">
-<div class="modal">
+<div class="modal" id="cardModalEl">
 <div class="modal-top">
 <h3>Post Tafsilotlari</h3> 
 <img src="./images/xMark-white.svg" id="exit" alt="">
@@ -142,7 +142,7 @@
 </form>
 <div class="btns">
     <button id="createBtnEl">create</button>
-    <button>cancel</button>
+    <button id="cancel">cancel</button>
 </div>
 </div>
 </div>
